# filter-sobel-parallel

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  exe  lerImagem  mypgm.h  open  opent  opent.cpp  sobel.c  teste.pgm  teste1.pgm
open-sobel/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  open  open.cpp
openmp-sobel-um/: CMakeCache.txt  Makefile  cmake_install.cmake  open  open.cpp
openmp-sobel-zero/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  open  open.cpp
